# simple_rust_webdev

./: Cargo.toml
src/: lib.rs  main.rs
src/database/: db.rs  init.sql  mod.rs  prelude.rs  rust_learn_users.rs  tasks.rs  users.rs
src/routes/: always_errors.rs  body_json.rs  create_tasks.rs  custom_header.rs  get_json.rs  mod.rs  user_agent.rs
