[package]
name = "simple_rust_webdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
sea-orm = { version = "0.12.4", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors"] }
